trying to fix the overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -167,6 +167,8 @@
   display: grid;
   place-items: center;
   padding-bottom: 140px;
+  max-width: 100vw;
+  overflow: hidden;
 
   .container {
     display: grid;
